--- a/GeneralsMD/Code/VS/WWVegas/WWLib.vcxproj
+++ b/GeneralsMD/Code/VS/WWVegas/WWLib.vcxproj
@@ -186,119 +186,119 @@
     <ClCompile Include="..\..\Src\Lib\WWVegas\WWLib\_mono.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="always.h" />
-    <ClInclude Include="argv.h" />
-    <ClInclude Include="b64pipe.h" />
-    <ClInclude Include="b64straw.h" />
-    <ClInclude Include="base64.h" />
-    <ClInclude Include="binheap.h" />
-    <ClInclude Include="bittype.h" />
-    <ClInclude Include="blit.h" />
-    <ClInclude Include="blitter.h" />
-    <ClInclude Include="bool.h" />
-    <ClInclude Include="borlandc.h" />
-    <ClInclude Include="bound.h" />
-    <ClInclude Include="BSEARCH.H" />
-    <ClInclude Include="bsurface.h" />
-    <ClInclude Include="BUFF.H" />
-    <ClInclude Include="bufffile.h" />
-    <ClInclude Include="CallbackHook.h" />
-    <ClInclude Include="chunkio.h" />
-    <ClInclude Include="Convert.h" />
-    <ClInclude Include="cpudetect.h" />
-    <ClInclude Include="CRC.H" />
-    <ClInclude Include="cstraw.h" />
-    <ClInclude Include="data.h" />
-    <ClInclude Include="dsurface.h" />
-    <ClInclude Include="ffactory.h" />
-    <ClInclude Include="FONT.H" />
-    <ClInclude Include="gcd_lcm.h" />
-    <ClInclude Include="growmix.h" />
-    <ClInclude Include="hash.h" />
-    <ClInclude Include="hashcalc.h" />
-    <ClInclude Include="HASHLIST.H" />
-    <ClInclude Include="hashtemplate.h" />
-    <ClInclude Include="IFF.H" />
-    <ClInclude Include="INDEX.H" />
-    <ClInclude Include="INI.H" />
-    <ClInclude Include="inisup.h" />
-    <ClInclude Include="INT.H" />
-    <ClInclude Include="iostruct.h" />
-    <ClInclude Include="keyboard.h" />
-    <ClInclude Include="LaunchWeb.h" />
-    <ClInclude Include="LCW.H" />
-    <ClInclude Include="LISTNODE.H" />
-    <ClInclude Include="mempool.h" />
-    <ClInclude Include="mixfile.h" />
-    <ClInclude Include="MONO.H" />
-    <ClInclude Include="MONODRVR.H" />
-    <ClInclude Include="MPMATH.H" />
-    <ClInclude Include="MPU.H" />
-    <ClInclude Include="msgloop.h" />
-    <ClInclude Include="multilist.h" />
-    <ClInclude Include="mutex.h" />
-    <ClInclude Include="Notify.h" />
-    <ClInclude Include="nstrdup.h" />
-    <ClInclude Include="ntree.h" />
-    <ClInclude Include="PALETTE.H" />
-    <ClInclude Include="pcx.H" />
-    <ClInclude Include="PIPE.H" />
-    <ClInclude Include="PK.H" />
-    <ClInclude Include="Point.h" />
-    <ClInclude Include="RAMFILE.H" />
-    <ClInclude Include="RANDOM.H" />
-    <ClInclude Include="RAWFILE.H" />
-    <ClInclude Include="rc4.h" />
-    <ClInclude Include="rcfile.h" />
-    <ClInclude Include="readline.h" />
-    <ClInclude Include="realcrc.h" />
-    <ClInclude Include="refcount.h" />
-    <ClInclude Include="ref_ptr.h" />
-    <ClInclude Include="registry.h" />
-    <ClInclude Include="RGB.H" />
-    <ClInclude Include="RLE.H" />
-    <ClInclude Include="RNDSTRAW.H" />
-    <ClInclude Include="rndstrng.h" />
-    <ClInclude Include="rng.h" />
-    <ClInclude Include="rsacrypt.h" />
-    <ClInclude Include="sampler.h" />
-    <ClInclude Include="sha.h" />
-    <ClInclude Include="shapeset.h" />
-    <ClInclude Include="sharebuf.h" />
-    <ClInclude Include="Signaler.h" />
-    <ClInclude Include="simplevec.h" />
-    <ClInclude Include="SLIST.H" />
-    <ClInclude Include="SLNODE.H" />
-    <ClInclude Include="srandom.h" />
-    <ClInclude Include="stl.h" />
-    <ClInclude Include="STRAW.H" />
-    <ClInclude Include="strtok_r.h" />
-    <ClInclude Include="Surface.h" />
-    <ClInclude Include="surfrect.h" />
-    <ClInclude Include="systimer.h" />
-    <ClInclude Include="TagBlock.h" />
-    <ClInclude Include="TARGA.H" />
-    <ClInclude Include="textfile.h" />
-    <ClInclude Include="thread.h" />
-    <ClInclude Include="timer.h" />
-    <ClInclude Include="trackwin.h" />
-    <ClInclude Include="trect.h" />
-    <ClInclude Include="trim.h" />
-    <ClInclude Include="uarray.h" />
-    <ClInclude Include="Vector.H" />
-    <ClInclude Include="verchk.h" />
-    <ClInclude Include="visualc.h" />
-    <ClInclude Include="WATCOM.H" />
-    <ClInclude Include="widestring.h" />
-    <ClInclude Include="win.h" />
-    <ClInclude Include="WWCOMUtil.h" />
-    <ClInclude Include="WWFILE.H" />
-    <ClInclude Include="wwstring.h" />
-    <ClInclude Include="xmouse.h" />
-    <ClInclude Include="XPIPE.H" />
-    <ClInclude Include="XSTRAW.H" />
-    <ClInclude Include="xsurface.h" />
-    <ClInclude Include="_mono.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\always.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\argv.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\b64pipe.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\b64straw.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\base64.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\binheap.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\bittype.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\blit.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\blitter.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\bool.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\borlandc.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\bound.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\BSEARCH.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\bsurface.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\BUFF.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\bufffile.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\CallbackHook.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\chunkio.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Convert.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\cpudetect.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\CRC.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\cstraw.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\data.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\dsurface.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\ffactory.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\FONT.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\gcd_lcm.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\growmix.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\hash.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\hashcalc.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\HASHLIST.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\hashtemplate.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\IFF.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\INDEX.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\INI.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\inisup.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\INT.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\iostruct.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\keyboard.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\LaunchWeb.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\LCW.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\LISTNODE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\mempool.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\mixfile.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\MONO.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\MONODRVR.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\MPMATH.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\MPU.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\msgloop.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\multilist.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\mutex.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Notify.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\nstrdup.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\ntree.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\PALETTE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\pcx.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\PIPE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\PK.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Point.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RAMFILE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RANDOM.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RAWFILE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\rc4.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\rcfile.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\readline.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\realcrc.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\refcount.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\ref_ptr.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\registry.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RGB.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RLE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\RNDSTRAW.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\rndstrng.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\rng.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\rsacrypt.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\sampler.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\sha.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\shapeset.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\sharebuf.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Signaler.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\simplevec.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\SLIST.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\SLNODE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\srandom.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\stl.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\STRAW.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\strtok_r.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Surface.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\surfrect.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\systimer.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\TagBlock.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\TARGA.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\textfile.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\thread.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\timer.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\trackwin.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\trect.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\trim.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\uarray.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\Vector.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\verchk.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\visualc.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\WATCOM.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\widestring.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\win.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\WWCOMUtil.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\WWFILE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\wwstring.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\xmouse.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\XPIPE.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\XSTRAW.H" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\xsurface.h" />
+    <ClInclude Include="..\..\Src\Lib\WWVegas\WWLib\_mono.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
